# MINIEMU

./: .gitignore  CMakeLists.txt  Chip8_referece.txt  LICENSE.md  README.md  cpui-log.txt  main.c
DOCS/: emu_roadmap.md  game_boy_reference.md  gameboy-opcodes.json
images/: chip8-gallery.md
src/: main.c
src/App/: App.h  AppImpl.h  CMakeLists.txt
src/App/SDL_TinyAppImpl/: SDL_TinyApp.c  SDL_TinyApp.h
src/App/UI/: EmulatorShell.c  EmulatorShell.h
src/App/UI/Fonts/: Default_7x8.h
src/App/include/: App.h  EmulatorShell.h  SDL_TinyApp.h
src/Chip8/: CC8_Api.h  CC8_Emulator.c  CC8_Emulator.h  CC8_Instructions.c  CC8_Instructions.h  CC8_Machine.h  CMakeLists.txt
src/Chip8/include/: CC8_Chip8.h  CC8_Emulator.h  CC8_InstructionContext.h  CC8_Instructions.h  CC8_Memory.h
src/Chip8/src/: CC8_Emulator.c  CC8_Instructions.c
src/Core/: CMakeLists.txt  backlog.md
src/Core/include/: minemu.h
src/Core/include/minemu/: MNE_File.h  MNE_Flags.h  MNE_Log.h  MNE_Memory.h
src/Core/src/: minemu.c
src/Core/src/minemu/: MNE_File.c  MNE_Log.c
src/GameBoy/: CMakeLists.txt
src/GameBoy/include/: GameBoy.h
src/GameBoy/include/CPU/: GB_Bus.h  GB_Instructions.h  GB_Registers.h
src/GameBoy/include/Emulation/: GB_Emulation.h  GB_Instruction.h  GB_SystemContext.h
src/GameBoy/include/Memory/: GB_Header.h  GB_MemoryMap.h
src/GameBoy/include/PPU/: GB_Pallete.h
src/GameBoy/src/CPU/: GB_Bus.c  GB_Instructions.c  GB_Registers.c
src/GameBoy/src/Emulation/: GB_Emulation.c
src/Tests/: CMakeLists.txt  Chip8_TEST.cpp  GameBoy_TEST.cpp
